--- a/templates/test/new.html.twig
+++ b/templates/test/new.html.twig
@@ -1,11 +1,68 @@
 {% extends 'base.html.twig' %}
+{#{% form_theme form 'bootstrap_4_layout.html.twig' %}#}
 
 {% block title %}New Test{% endblock %}
 
 {% block body %}
-    <h1>Create new Test</h1>
+    <style> 
 
-    {{ include('test/_form.html.twig') }}
+        .testContainer {
+            border-radius: 15px;
+            background: #00CED1;
+            padding: 20px;
+            width: 80vw;
+            overflow: auto;
+            display: block;
+            text-align: center;
+        }
+
+        .questionContainer {
+            border-radius: 15px;
+            background: #00CED1;
+            padding: 20px;
+            width: 80vw;
+            overflow: auto;
+            display: block;
+            text-align: center;
+
+        }           
+        .correct {
+            float: right;
+        }     
+    </style>
+    
+    <h1>Create new Test</h1>
+    <div class="testContainer">
+        {#{{ include('test/_form.html.twig')}} #}
+        <form id="form" method="post" action="{{ path('app_test_new') }}" enctype="multipart/form-data">
+            <div class="text-center wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+                <h1 class="mb-5">Créer une nouvelle certification</h1>
+            </div>
+            <div class="form-floating">
+                <input type="text" class="form-control" id="Titre" name="titre" placeholder="Titre..." required>
+                <label for="titre">Titre</label>
+                
+            </div>
+            <div class="form-floating">
+                <input type="number" class="form-control" id="nbrTent" name="nbrTent" min=0 required
+                    oninput="validity.valid||(value='');">
+                    <label for="nbrTent">Nombre de tentatives</label>     
+           </div>
+           <div class="form-floating">
+                <input type="number" class="form-control" id="duree" name="duree" min=0 required
+                oninput="validity.valid||(value='');">
+                <label for="duree">Durée (en minutes)</label>
+           </div>
+					<button class="btn btn-primary w-100 py-3" type="submit">Créer</button>
+
+        </form>
+
+    </div>
+    
 
     <a href="{{ path('app_test_index') }}">back to list</a>
+
+
+
+
 {% endblock %}
