--- a/templates/user/Travailleur/TravailleurManageJobs.html.twig
+++ b/templates/user/Travailleur/TravailleurManageJobs.html.twig
@@ -126,7 +126,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="breadcrumb-area">
-                    <h1>CV</h1>
+                    <h1>Mes annonces</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="#">Acceuil</a></li>
