--- a/templates/message/send.html.twig
+++ b/templates/message/send.html.twig
@@ -1,29 +1,46 @@
-  
-{% extends 'base.html.twig' %}
-
-{% block title %}Messagerie
-{% endblock %}
-
+{% extends 'base2.html.twig' %}
+{% block head %} {% block stylesheet %} {{ parent() }}{% endblock %} {% endblock %}
 {% block body %}
-	<section class="container">
-		<div class="row">
-			<div class="col">
-				<h1>Envoyer un message</h1>
-                {{ form(form) }}
-			</div>
-		</div>
-	</section>
-	
-		
-            <div>
-                <a href="{{ path("message") }}" class="list-group-item list-group-item-action">Accueil</a>
+    {% block con %}    {{ parent() }} {% endblock %}
+
+
+
+    <div class="alice-bg section-padding-bottom">
+        <div class="container no-gliters">
+            <div class="row no-gliters">
+                <div class="col">
+                    <div class="dashboard-container">
+                        <div class="dashboard-content-wrapper">
+                            <div class="manage-job-container">
+                                <div class="col">
+                                    <h1>Envoyer un message</h1>
+                                    {{ form(form) }}
+                                    <a href="{{ path("message") }}" class="button">Accueil</a>
+                                    <a href="{{ path("received") }}" class="button">Boîte de réception</a>
+                                    <a href="{{ path("sent") }}" class=button>Eléments envoyés</a>
+
+
+                                </div>
+
+                            </div>
+                        </div>
+                        {%block sidebar%}    {{ parent() }}
+                        {% endblock %}
+                    </div>
+                </div>
             </div>
-            <div>
-                <a href="{{ path("message") }}" class="list-group-item list-group-item-action">Boîte de réception</a>
-            </div>
-            <div>
-                <a href="{{ path("message") }}" class="list-group-item list-group-item-action">Eléments envoyés</a>
-            </div>
-		</div>
-	
+        </div>
+
+
+
+
+
+
+
+    {% block action %} {{ parent() }} {% endblock %}
+    {% block footer %} {{ parent() }} {% endblock %}
+
+
+
+
 {% endblock %}
