--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -214,7 +214,7 @@
                 <li><i class="fas fa-heart"></i><a href="/Employeur/GererEmploi">Liste des annonces</a></li>
                 <li><i class="fas fa-check-square"></i><a href="/Employeur/GererCandidats">Liste des candidats</a></li>
                 <li><i class="fas fa-check-square"></i><a href="/Employeur/PublierOffre">Publiez offre</a></li>
-                <li><i class="fab fa-facebook-messenger"></i><a href="/travailleur/GererOffres">Messages</a></li>
+                <li><i class="fab fa-facebook-messenger"></i><a href="/message">Messages</a></li>
 
             </ul>
             <ul class="delete">
