--- a/templates/message/index.html.twig
+++ b/templates/message/index.html.twig
@@ -1,38 +1,85 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Messagerie
-{% endblock %}
-
+{% extends 'base2.html.twig' %}
+{% block head %} {% block stylesheet %} {{ parent() }}{% endblock %} {% endblock %}
 {% block body %}
-	<section class="container">
-		<div class="row">
+    {% block con %}    {{ parent() }} {% endblock %}
+
+
+<div class="alice-bg section-padding-bottom">
+	<div class="container no-gliters">
+		<div class="row no-gliters">
 			<div class="col">
-				<h1>Messagerie</h1>
-				<p>Résumé de la messagerie</p>
-				<p>Reçus : {{ app.user.received|length }}</p>
-				<p>Envoyés : {{ app.user.sent|length }}</p>
-				<a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-					Click Me !
-				</a>
-                <a href="{{path("send")}}" class="btn btn-primary">Envoyer un message</a>
+				<div class="dashboard-container">
+					<div class="dashboard-content-wrapper">
+						<div class="manage-job-container">
+							<table class="table">
+								<thead>
+								<tr>
+									<th>Récus</th>
+									<th>Envoyés</th>
+									<th class="action">Action</th>
+								</tr>
+								</thead>
+								<tbody>
+									<tr class="job-items">
+										<td class="title"><h5>{{ app.user.received|length }}</h5></td>
+										<td class="title"><h5>{{ app.user.sent|length }}</h5></td>
+										<td><a href="{{path("send")}}" class="btn btn-primary">Envoyer un message</a></td>
+
+									{#  	<td class="action">
+											<a href="{{ path('annonce_show', {id: annonces.id}) }}" class="preview" title="Preview"><i data-feather="eye"></i></a>
+											<a href="{{ path('Myannonce_showEmployer', {id: annonces.id}) }}" class="edit" title="Edit"><i data-feather="edit"></i></a>
+											<a href="#" class="remove" title="Delete"><i data-feather="trash-2"></i></a>
+										</td>#}
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+					{%block sidebar%}    {{ parent() }}
+					{% endblock %}
+				</div>
 			</div>
 		</div>
-	</section>
-	<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-		<div class="offcanvas-header">
-			<h2 class="offcanvas-title" id="offcanvasExampleLabel">Mes dossiers</h2>
-			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-		</div>
-		<div class="offcanvas-body">
-            <div class="list-group">
-                <a href="{{ path("message") }}" class="list-group-item list-group-item-action active">Accueil</a>
-            </div>
-            <div class="list-group">
-                <a href="{{ path("received") }}" class="list-group-item list-group-item-action">Boîte de réception</a>
-            </div>
-            <div class="list-group">
-                <a href="{{ path("sent") }}" class="list-group-item list-group-item-action">Eléments envoyés</a>
-            </div>
+	</div>
+
+
+	{% block action %} {{ parent() }} {% endblock %}
+	{% block footer %} {{ parent() }} {% endblock %}
+
+
+
+
+{% endblock %}
+
+
+{# <section class="container">
+	<div class="row">
+		<div class="col">
+			<h1>Messagerie</h1>
+			<p>Résumé de la messagerie</p>
+			<p>Reçus : {{ app.user.received|length }}</p>
+			<p>Envoyés : {{ app.user.sent|length }}</p>
+			<a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+				Click Me !
+			</a>
+			<a href="{{path("send")}}" class="btn btn-primary">Envoyer un message</a>
 		</div>
 	</div>
-{% endblock %}
+</section>
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+	<div class="offcanvas-header">
+		<h2 class="offcanvas-title" id="offcanvasExampleLabel">Mes dossiers</h2>
+		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+	</div>
+	<div class="offcanvas-body">
+		<div class="list-group">
+			<a href="{{ path("message") }}" class="list-group-item list-group-item-action active">Accueil</a>
+		</div>
+		<div class="list-group">
+			<a href="{{ path("recieved") }}" class="list-group-item list-group-item-action">Boîte de réception</a>
+		</div>
+		<div class="list-group">
+			<a href="{{ path("sent") }}" class="list-group-item list-group-item-action">Eléments envoyés</a>
+		</div>
+	</div>
+</div> #}
