--- a/templates/message/received.html.twig
+++ b/templates/message/received.html.twig
@@ -1,62 +1,73 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Messagerie
-{% endblock %}
-
+{% extends 'base2.html.twig' %}
+{% block head %} {% block stylesheet %} {{ parent() }}{% endblock %} {% endblock %}
 {% block body %}
-	<section class="container">
-		<div class="row">
-			<div class="col-12">
-				<h1>Messagerie</h1>
-				<h2>Boîte de réception</h2>
-				<p>Vous avez reçu
-					{{ app.user.received|length }}
-					messages</p>
-			</div>
-			<div class="col-3">De</div>
-			<div class="col-3">Sujet</div>
-			<div class="col-3">Date</div>
-			<div class="col-3"></div>
-			{% for message in app.user.received %}
-				{% set bold = "" %}
-				{% if message.isRead == 0 %}
-					{% set bold = "fw-bold" %}
-				{% endif %}
-
-				<div class="col-3 {{bold}}">{{ message.sender.email }}</div>
-				<div class="col-3 {{bold}}">
-					<a href="{{ path("read", {id: message.id}) }}">{{ message.title }}</a>
-				</div>
-				<div class="col-3 {{bold}}">{{ message.createdAt|date }}</div>
-				<div class="col-3">
-                    
-				</div>
-			{% endfor %}
+	{% block con %}    {{ parent() }} {% endblock %}
 
 
+
+
+<div class="alice-bg section-padding-bottom">
+	<div class="container no-gliters">
+		<div class="row no-gliters">
 			<div class="col">
-				<a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-					Voir mes dossiers
-				</a>
-				<a href="{{path("send")}}" class="btn btn-primary">Envoyer un message</a>
-			</div>
-		</div>
-	</section>
-	<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-		<div class="offcanvas-header">
-			<h2 class="offcanvas-title" id="offcanvasExampleLabel">Mes dossiers</h2>
-			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-		</div>
-		<div class="offcanvas-body">
-			<div class="list-group">
-				<a href="{{ path("message") }}" class="list-group-item list-group-item-action">Accueil</a>
-			</div>
-			<div class="list-group">
-				<a href="{{ path("received") }}" class="list-group-item list-group-item-action active">Boîte de réception</a>
-			</div>
-			<div class="list-group">
-				<a href="{{ path("message") }}" class="list-group-item list-group-item-action">Eléments envoyés</a>
+				<div class="dashboard-container">
+					<div class="dashboard-content-wrapper">
+							<div class="row">
+								<div class="col-12">
+									<h1>Messagerie</h1>
+									<h2>Boîte de réception</h2>
+									<p>Vous avez reçu
+										{{ app.user.received|length }}
+										messages</p>
+								</div>
+								<div class="col-3">De</div>
+								<div class="col-3">Sujet</div>
+								<div class="col-3">Date</div>
+								<div class="col-3"></div>
+								{% for message in app.user.received %}
+									{% set bold = "" %}
+									{% if message.isRead == 0 %}
+										{% set bold = "fw-bold" %}
+									{% endif %}
+
+									<div class="col-3 {{bold}}">{{ message.sender.email }}</div>
+									<div class="col-3 {{bold}}">
+										<a href="{{ path("read", {id: message.id}) }}">{{ message.title }}</a>
+									</div>
+									<div class="col-3 {{bold}}">{{ message.createdAt|date }}</div>
+									<div class="col-3">
+
+									</div>
+								{% endfor %}
+
+
+								<div class="col">
+									<a href="{{path("send")}}" class="btn btn-primary">Envoyer un message</a>
+								</div>
+								<a href="{{ path("message") }}" class="button">Accueil</a>
+								<a href="{{ path("received") }}" class="button">Boîte de réception</a>
+								<a href="{{ path("message") }}" class="button">Eléments envoyés</a>
+
+							</div>
+					</div>
+					{%block sidebar%}    {{ parent() }}
+					{% endblock %}
+				</div>
 			</div>
 		</div>
 	</div>
+
+
+
+
+
+
+
+
+	{% block action %} {{ parent() }} {% endblock %}
+	{% block footer %} {{ parent() }} {% endblock %}
+
+
+
+
 {% endblock %}
