--- a/templates/evaluation/index.html.twig
+++ b/templates/evaluation/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Evaluation index</h1>
 
-    <table class="table">
+    <table class="table table-hover table-bordered table-striped">
         <thead>
             <tr>
                 <th>Id</th>
