--- a/templates/question/index.html.twig
+++ b/templates/question/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Question index</h1>
 
-    <table class="table">
+    <table class="table table-hover table-bordered table-striped">
         <thead>
             <tr>
                 <th>Id</th>
@@ -37,5 +37,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_question_new') }}">Create new</a>
+    <a href="{{ path('app_question_newg') }}">Create new</a>
 {% endblock %}
